tests/e2e/operator_assignment_map.error
Error: syntax error in story at line 2, column 1

2|    a += {"bar": 2}
      ^^^^^^^^^^^

E0103: `+` between `Map[string,string]` and `Map[string,int]` is not supported.
